# Variant

./: .gitignore  CMakeLists.txt  README.md  main.cpp  variant.h
